--- a/frontend/src/Styles/SignUp.scss
+++ b/frontend/src/Styles/SignUp.scss
@@ -3,9 +3,7 @@
 .signup-container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  height: 100vh;
 }
 
 .signup-form {
@@ -14,6 +12,8 @@
   background-color: $background-color;
   border: 1px white solid;
   border-radius: 10px;
+  margin-bottom: 1em;
+  margin-top: 1em;
 }
 
 .signup-form label {
@@ -31,6 +31,13 @@
   margin-bottom: 16px;
 }
 
+.add-pfp-button {
+  border-radius: 10px;
+  color: $icon-color;
+  background-color: $primary-color;
+  border: 1em $primary-color solid;
+}
+
 .signup-form button {
   border-radius: 10px;
   color: $icon-color;
@@ -39,16 +46,42 @@
 }
 
 .signup-icon {
+  margin-top: 2em;
   margin-bottom: 10px;
-  /* Ajusta según sea necesario para separar el ícono del formulario */
   color: $primary-color;
   font-size: 10em;
 }
 
-.signup-title{
+.profile-picture-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  position: relative;
+}
+
+.profile-picture-image img{
+  min-width: 200px;
+  max-width: 200px;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.pfp-icon {
+  font-size: 1.5em;
+  padding: 0.5em;
+  background-color: $primary-color;
+  color: $icon-color;
+  margin-bottom: 0.5em;
+  margin-top: 0.5em;
+  border-radius: 50%;
+}
+
+.signup-title {
   font-size: 2em;
   color: $icon-color;
-  margin-top: 1px;
+  margin: 0;
+
 }
 
 /*VERSIÓN DE DESKTOP*/
@@ -66,6 +99,10 @@
     width: 90%;
     padding: 10px;
     margin-bottom: 20px;
+  }
+
+  .signup-form img {
+    width: 10vw;
   }
 
   .signup-form button {
