--- a/frontend/src/Styles/Cards.scss
+++ b/frontend/src/Styles/Cards.scss
@@ -56,18 +56,21 @@
         display: flex;
         grid-area: genre;
         justify-content: space-around;
+        flex-wrap: wrap;
         align-items: flex-end;
     }
 
     .item5>p {
         background-color: $primary-color;
         padding: 0.5em;
+        font-size: 0.80em;
         border-radius: 1em;
     }
 
     .item1>img {
-        object-fit: cover;
-        width: 100%;
+        // object-fit: cover;
+        min-width: 100%;
+        max-width: 100%;
         height: 100%;
     }
 
