--- a/frontend/src/Styles/colors.scss
+++ b/frontend/src/Styles/colors.scss
@@ -2,4 +2,15 @@ $background-color: #141414; //The background color for the app.
 $icon-color: white; //The normal color of the icons.
 $primary-color:#C70039; //The primary color of the app.
 
+.icons {
+    font-size: 1.5em;
+    transition: color 1s ease;
+    padding: 0.5em;
 
+}
+
+.desktop-icons{
+    font-size: 1.75em;
+    transition: color 1s ease;
+    padding: 0.5em;
+}
